@startuml

!theme toy
skinparam shadowing true
mainframe erd Database Penyuplaian Hanger
skinparam linetype ortho
entity users {
* username: VARCHAR(55) <<PK>>
--
* password: VARCHAR(55)
* full_name: VARCHAR(125)
* last_login: TIMESTAMP
--
* role_id: INT <<FK>>
}

entity user_role {
* id: INT <<PK>>
--
* role_name: VARCHAR(55)
}

entity session {
* id: VARCHAR(55) <<PK>>
--
* username: VARCHAR(120) <<FK>>
}

entity hanger_types {
* id: VARCHAR(55) <<PK>>
--
* qty: INT
}

entity hangers {
* id: VARCHAR(55) <<PK>>
--
* order_number: INT
* name: VARCHAR(125)
* qty: INT
--
* hanger_types_id: VARCHAR(55) <<FK>>
}

entity periods {
* id: VARCHAR(11) <<PK>>
--
* created_at TIMESTAMP
}

entity schedule_m_category {
* id: VARCHAR(3) <<PK>>
--
}

entity supply_schedules {
* id: VARCHAR(55) <<PK>>
--
* month: INT
* is_done: TINYINT
--
* hanger_types_id: VARCHAR(55) <<FK>>
* period_id: VARCHAR(11) <<FK>>
}

entity schedule_weeks {
* id: VARCHAR(55) <<PK>>
--
* date: DATE
* is_done: TINYINT
--
* supply_schedules_id: VARCHAR(55) <<FK>>
* m_id: VARCHAR(3) <<FK>>
}

entity supplies {
* id: VARCHAR(55) <<PK>>
--
* target_set: INT
--
* hanger_types_id: VARCHAR(55) <<FK>>
* schedule_weeks_id: VARCHAR(55) <<FK>>
}

entity supply_lines {
* id: INT <<PK>>
--
line_a: INT
line_b: INT
line_c: INT
total: INT
--
* supply_id: VARCHAR(55) <<FK>>
* hanger_id: VARCHAR(55) <<FK>>
}

users}|--||user_role
users||--||session
hangers}|--||hanger_types
supply_schedules}|--||periods
supply_schedules}|--||hanger_types
schedule_weeks}|--||schedule_m_category
schedule_weeks}|--||supply_schedules
supplies}|--||hanger_types
supplies||--||schedule_weeks
supply_lines}|--||supplies

@enduml
